fix: don't wrap form-label so that buttons will stay level with first line of text

--- a/src/main/webapp/uii/templatePG/css/src/components/_forms-custom.scss
+++ b/src/main/webapp/uii/templatePG/css/src/components/_forms-custom.scss
@@ -170,7 +170,7 @@ fieldSet:disabled .badge > a {
   > .form-label {
     display: flex;
     flex: 0 0 auto;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     padding: 0.5rem;
     margin: 0;
     max-width: 100%;
